examples/datalog/10_edge_cases/87_diamond_dependency.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_diamond
Knowledge graph 'test_diamond' created.
Switched to knowledge graph: test_diamond
> .kg use test_diamond
Switched to knowledge graph: test_diamond
> +start[(1,), (2,)].
Inserted 2 fact(s) into 'start'.
> left(X, Y) :- start(X), Y = X * 2.
Script error: Query execution failed: Unsafe rule: Atom { relation: "left", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
