examples/datalog/10_edge_cases/87_diamond_dependency.dl
% Test: Diamond-shaped rule dependencies
% Expected: All paths compute correctly
% Category: 10_edge_cases
% Priority: P2 - Edge cases

.kg create test_diamond
.kg use test_diamond

+start[(1,), (2,)].

% Diamond: start -> left/right -> end
left(X, Y) :- start(X), Y = X * 2.
right(X, Y) :- start(X), Y = X + 10.
combined(X, L, R) :- left(X, L), right(X, R).

?- combined(X, L, R).

.kg use default
.kg drop test_diamond
